# IICS_CICD_PIPELINE

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_log.txt
.github/workflows/: IICS_DEPLOYMENT.yml
Explore/CDI_USECASE/: .CDI_USECASE.Project.json  CDI_USECASE.Project.json
Explore/Default/: .Default.Project.json  .MappingTask11.MTT.json  Default.Project.json  MappingTask11.MTT.vc.json
Explore/FORVIA/: .FORVIA.Project.json  FORVIA.Project.json
Explore/demo/: .MappingTask11.MTT.json  .demo.Project.json  MappingTask11.MTT.vc.json  demo.Project.json
Explore/snippani/: .BasicWorkItemType.PROCESS_OBJECT.json  .CreditorFinancialInstitutionType.PROCESS_OBJECT.json  .DebtorFinancialInstitutionType.PROCESS_OBJECT.json  .DeliveryAdjustmentType.PROCESS_OBJECT.json  .ExchangedDocumentType.PROCESS_OBJECT.json  .FinancialAdjustmentType.PROCESS_OBJECT.json  .FinancialInstitutionAddressType.PROCESS_OBJECT.json  .HR_8.HSCHEMA.json  .Hierarchical Schema10.HSCHEMA.json  .IDType.PROCESS_OBJECT.json  .Mapping18.DTEMPLATE.json  .MappingTask8.MTT.json  .PaymentTermsEventTimeReferenceCodeType.PROCESS_OBJECT.json  .Process3.PROCESS.json  .ReferenceCodeType.PROCESS_OBJECT.json  .ReferencedDocumentType.PROCESS_OBJECT.json  .ReferencedStandardType.PROCESS_OBJECT.json  .SpatialDimensionType.PROCESS_OBJECT.json  .snippani.Project.json  (+31 more)
scripts/: config.py  deploy_dev.py  deploy_uat.py  exceptions.py  helper_functions.py  iics_auth.py  iics_client.py  infa_get_updates.py  infa_login.py  infa_update_and_test.py  rollback_asset.py  rollback_mapping.py  testing_functions.py
(+12 files in other folders)
